--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -10,6 +10,7 @@
   "author": "Villigton kulkamp",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.16.3"
   },
   "devDependencies": {
